# newsletter

./: .editorconfig  .gitignore  Cargo.toml
backup-cron/: Dockerfile  backup.sh  build_and_publish.sh
clis/voucherc-features/: Cargo.toml
clis/voucherc-features/src/: main.rs
customers/gsg/gs-sync/: package-lock.json  package.json
customers/gsg/gs-sync/src/: main.js
customers/gsg/sync/: .gitignore  Dockerfile  package-lock.json  package.json
customers/gsg/sync/src/: main.js
dealc/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  fmt.sh  normalize.py  predict.py  train.py
dealc/data/: deals.en.txt  ndeals.en.txt
dealc/src/: main.rs  phrase.rs
eml-parser/: .dockerignore  .env.example  CHANGELOG.md  Dockerfile  README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
eml-parser/src/: conf.ts  db.ts  index.ts  parse.ts  s3.ts  sqs.ts
eml-parser/test/: db.spec.ts  parse.in  parse.out  parse.spec.ts  parse_cc.in  parse_forwardees.in  parse_forwardees.out
heuristic/: Cargo.toml
heuristic/src/: conf.rs  error.rs  main.rs  models.rs
heuristic/src/predict/: common_phrases.rs
heuristic/src/sources/: common_phrases.rs  mod.rs  openai.rs
humaninloop/: Cargo.toml
humaninloop/src/: html.rs  main.rs  models.rs  prelude.rs  state.rs
humaninloop/src/assets/: image.handlebars.html
k8s/: README.md  backup-cron.yml  dealc.yml  eml-parser.yml  gsg-sync.yml  ocr.yml  predictor.yml  prtsc.yml  sieve.yml  storage.yml  voucherc.yml
migrations/: 000001_create_inbound_emails_table.up.sql  000002_create_offers_table.up.sql
ocr/: Cargo.toml  Dockerfile
ocr/src/: conf.rs  error.rs  main.rs  state.rs  vision.rs
predictor/: .gitignore  Cargo.toml  Dockerfile
predictor/src/: conf.rs  error.rs  main.rs  models.rs  parse.rs  state.rs
predictor/src/predict/: common_phrases.rs  mod.rs  openai.rs
predictor/test/assets/: openai.json
prtsc/: .env.example  .gitignore  Cargo.toml  Dockerfile  KNOWN_ISSUES.md  entrypoint.sh
prtsc/src/: browser.rs  conf.rs  error.rs  event.rs  main.rs  prelude.rs  state.rs
shared/: Cargo.toml
shared/src/: anchor.rs  http.rs  lib.rs  s3.rs  sqs.rs  tests.rs  vision.rs
shared/src/document/: mod.rs  phrases.rs
shared/src/phrases/: mod.rs  parse.rs  words.rs
shared/test/assets/: parse_text1.json  parse_text2.json  parse_text3.json
sieve/: .gitignore  Cargo.toml  Dockerfile
sieve/src/: anchor.rs  conf.rs  db.rs  error.rs  main.rs  prelude.rs  select.rs  state.rs
sieve/src/select/: deal.rs  voucher.rs
sieve/test/assets/: bug_deduplicate_deals1.json  bug_skips_offers1.json  bug_skips_offers2.json  deduplicate_deals_ignore_case.json  deduplicate_vouchers.json  default.json  join_adjacent_deals.json  join_adjacent_deals_and_vouchers.json
voucherc/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  features.py  predict.py  train.py
voucherc/data/: deals.de.txt  deals.en.txt  ndeals.en.txt  nvouchers.csv  nvouchers.txt  svm.json  vouchers.csv  vouchers.txt
voucherc/data/dnn_model/: saved_model.pb
voucherc/data/dnn_model/variables/: variables.data-00000-of-00001  variables.index
voucherc/py-nn/: README.md  fmt.sh
voucherc/py-nn/src/: predict.py  train.py  train_deals.py
voucherc/src/: cli.rs  conf.rs  features.rs  features_cli.rs  http.rs  train_cli.rs  types.rs
