[package]
name = "dealc"
version = "0.1.0"
authors = ["Michael <michael@porkbrain.com>"]
edition = "2018"

[dependencies]
actix-web = { version = "4.0.0-beta.6", features = ["rustls"] }
dotenv = "0.15"
env_logger = "0.8"
envy = "0.4"
log = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.5", features = ["full"] }

# local
shared = { path = "../shared" }

[dev-dependencies]
shared = { path = "../shared", features = ["test_utils"] }

