[package]
name = "humaninloop"
version = "0.1.0"
authors = ["Michael <michael@porkbrain.com>"]
edition = "2018"

[dependencies]
async-std = { version = "1.8", features = ["attributes"] }
dotenv = "0.15"
env_logger = "0.8"
envy = "0.4"
handlebars = "3.5"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tide = "0.16"

# local
shared = { path = "../shared" }

[[bin]]
name = "humaninloop"
path = "src/main.rs"

