[package]
name = "humaninloop"
version = "0.1.0"
authors = ["Michael <michael@porkbrain.com>"]
edition = "2018"

[dependencies]
actix-web = { version = "4.0.0-beta.6", features = ["rustls"] }
dotenv = "0.15"
env_logger = "0.8"
envy = "0.4"
futures = "0.3"
handlebars = "3.5"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surf = "2.2"
tokio = { version = "1.5", features = ["full"] }

# local
shared = { path = "../shared" }

[[bin]]
name = "humaninloop"
path = "src/main.rs"

