[package]
name = "ocr"
version = "0.1.0"
authors = ["Michael <michael@porkbrain.com>"]
edition = "2018"

[dependencies]
# ops
async-trait = "0.1"
dotenv = "0.15"
env_logger = "0.8"
envy = "0.4"
futures = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.5", features = [ "macros", "sync" ] }
oauth2 = { version = "5.1", package = "yup-oauth2" }
# This project intentionally uses an old version of Hyper. See
# https://github.com/Byron/google-apis-rs/issues/173 for more
# information.
hyper = "0.14"
hyper-rustls = "0.22"

# services
google-vision1 = { version = "2.0" }

# local
shared = { path = "../shared" }

[dev-dependencies]
shared = { path = "../shared", features = ["test_utils"] }

