[package]
name = "prtsc"
version = "0.1.0"
authors = ["Michael <michael@porkbrain.com>"]
edition = "2018"

[dependencies]
# ops
async-trait = "0.1"
dotenv = "0.15"
env_logger = "0.8"
envy = "0.4"
futures = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.4", features = [ "macros" ] }

# services
fantoccini = { version = "0.17", features = ["rustls-tls"] }
rusoto_core = { version = "0.46", features = [ "rustls" ], default-features = false }
rusoto_s3 = { version = "0.46", features = [ "rustls" ], default-features = false }
rusoto_sqs = { version = "0.46", features = [ "rustls" ], default-features = false }

# local
shared = { path = "../shared" }

[dev-dependencies]
shared = { path = "../shared", features = ["test_utils"] }

