[package]
name = "shared"
version = "0.2.0"
authors = ["Michael <michael@porkbrain.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
futures = "0.3"
log = "0.4"
rusoto_core = { version = "0.46", features = [ "rustls" ], default-features = false }
rusoto_s3 = { version = "0.46", features = [ "rustls" ], default-features = false }
rusoto_sqs = { version = "0.46", features = [ "rustls" ], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
google-vision1 = "2.0"

[features]
test_utils = []
