[package]
name = "sieve"
version = "0.1.0"
authors = ["Michael <michael@porkbrain.com>"]
edition = "2018"

[dependencies]
# ops
async-trait = "0.1"
dotenv = "0.15"
env_logger = "0.8"
envy = "0.4"
futures = "0.3"
geo = "0.18"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlite = "0.26"
tokio = { version = "1.5", features = [ "macros", "sync" ] }

# local
shared = { path = "../shared" }

[dev-dependencies]
shared = { path = "../shared", features = ["test_utils"] }

