[package]
name = "voucherc"
version = "0.1.0"
authors = ["Michael <michael@porkbrain.com>"]
edition = "2018"

[dependencies]
clap = "2.33"
dotenv = "0.15"
env_logger = "0.8"
envy = "0.4"
log = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smartcore = "0.2"
static_init = "1.0"
tide = "0.16"
async-std = { version = "1.8", features = ["attributes"] }

[[bin]]
name = "voucherc_http"
path = "src/http.rs"

[[bin]]
name = "voucherc_cli"
path = "src/cli.rs"

